<resources>
    <string name="app_name">MusicHeads</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_logout">Cerrar Sesión</string>
    <string name="edad">Edad: %s</string>
    <string name="nombre">Nombre: %s</string>
    <string name="biografia">Biografia: %s</string>
    <string name="datosartista">DatosArtistaFragment</string>
    <string name="album_title">Album Title: %s</string>
    <string name="artist_name">Artist Name: %s</string>
    <string name="date">Date: %s</string>
    <string name="datosalbum">DatosAlbumFragment</string>
    <string name="songnum">SongNum: %s</string>
    <string name="genre">Genre: %s</string>
    <string name="artist_name_item">Artist Name</string>
    <string name="search">Buscar</string>
    <string name="searchfragment">SearchFragment</string>
    <string name="nombrebusqueda">NombreBusqueda</string>
    <string name="infobusqueda">InfoBusqueda</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="favoritosfragment">FavoritosFragment</string>
    <string name="ultimos_albumes">Últimos Álbumes añadidos</string>
</resources>