<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="net.proyecto.victorberenguermadrid.musicheads.fragment.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_searchFragment"
            app:destination="@id/searchFragment" />
        <action
            android:id="@+id/action_homeFragment_to_albumDetailFragment"
            app:destination="@id/datosAlbumFragment" />
        <action
            android:id="@+id/action_nav_home_to_favoritosFragment"
            app:destination="@id/favoritosFragment" />
    </fragment>

    <fragment
        android:id="@+id/searchFragment"
        android:name="net.proyecto.victorberenguermadrid.musicheads.fragment.SearchFragment"
        android:label="@string/searchfragment" >
        <action
            android:id="@+id/action_searchFragment_to_datosAlbumFragment"
            app:destination="@id/datosAlbumFragment" />
        <action
            android:id="@+id/action_searchFragment_to_datosArtistaFragment"
            app:destination="@id/datosArtistaFragment" />
    </fragment>

    <fragment
        android:id="@+id/datosAlbumFragment"
        android:name="net.proyecto.victorberenguermadrid.musicheads.fragment.DatosAlbumFragment"
        android:label="@string/datosalbum"
        tools:layout="@layout/fragment_datos_album">
        <action
            android:id="@+id/action_datosAlbumFragment_to_DatosArtistaFragment"
            app:destination="@id/datosArtistaFragment" />
    </fragment>

    <fragment
        android:id="@+id/datosArtistaFragment"
        android:name="net.proyecto.victorberenguermadrid.musicheads.fragment.DatosArtistaFragment"
        android:label="@string/datosartista"
        tools:layout="@layout/fragment_datos_artista"/>
    <fragment
        android:id="@+id/favoritosFragment"
        android:name="net.proyecto.victorberenguermadrid.musicheads.fragment.FavoritosFragment"
        android:label="@string/favoritosfragment" >
        <action
            android:id="@+id/action_favoritosFragment_to_datosAlbumFragment"
            app:destination="@id/datosAlbumFragment" />
    </fragment>


</navigation>